force-app/main/default/objects/Bid__c.object
<CustomObject>
    <description>Record that tracks bid information. Created for Migratory Bird Initiative team for their reverse auction work in 2013.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of Contracting Party. Must be an account with record type &quot;Accounts (Partners/Vendors)&quot;.</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Do not select the contact&apos;s household account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012300000009Sp9</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>Account Representative</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acreage_Difference__c</fullName>
        <formula>Acres__c  -  GIS_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between bid acres and GIS acres.</inlineHelpText>
        <label>Acreage Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acres_Percentage_Difference__c</fullName>
        <formula>IF(GIS_Acres__c&gt;0,((Acres__c - GIS_Acres__c )/ GIS_Acres__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% difference between Bid Acres and GIS Acres.</inlineHelpText>
        <label>Acreage Difference %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acres_Unenrolled_Field_s__c</fullName>
        <inlineHelpText>Unenrolled fields are used as control fields, to measure the efficacy of the program. Number of acres in available unenrolled fields as reported by the bidder.</inlineHelpText>
        <label>Number of Acres in Unenrolled Field(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acres__c</fullName>
        <inlineHelpText># Acres entered into the bid form by the bidder. Do not change. If # of acres changes when creating the contract, use the &apos;adjusted acres&apos; field on the contract record to reflect this change.</inlineHelpText>
        <label>Bid Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Acres__c</fullName>
        <inlineHelpText>Reduced acreage based on changes agreed upon before the field season. Copied to contract when it is created.</inlineHelpText>
        <label>Adjusted Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_APNs__c</fullName>
        <description>Used for FY14 but requested to be removed for FY15. Not to be used or referenced.</description>
        <label>XDeprecated: Bid APNs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bid_Auto_Number__c</fullName>
        <description>Used in WFR formula to set the bid name. Auto-named because they are being created by an external system (form assembly).</description>
        <displayFormat>{000}</displayFormat>
        <label>Bid Auto-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bid_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Migratory Bird contact record type. A contact can submit multiple bids on multiple properties he/she owns.</description>
        <inlineHelpText>Primary contact for the bid. Can be the same person as the Contract Representative. A contact can submit multiple bids on multiple properties he/she owns.</inlineHelpText>
        <label>Bid Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Id</field>
                <operation>equals</operation>
                <value>012a00000018FX4</value>
            </filterItems>
            <infoMessage>Select the conservation contact that will submit the bid.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Mapped__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box once bid mapping is final.</inlineHelpText>
        <label>Bid Mapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Notes__c</fullName>
        <inlineHelpText>Generic internal notes on the bid. This info is copied to the contract record when it&apos;s created.</inlineHelpText>
        <label>Bid Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bid_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Because bids are automatically created by Form Assembly, this field helps to identify bids that have not yet been reviewed by program staff, to help from letting them fall through the cracks.</description>
        <inlineHelpText>This bid has been fully reviewed by Program Staff.</inlineHelpText>
        <label>Bid Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Stage__c</fullName>
        <inlineHelpText>Deprecating, no longer do multiple stages of bidding.</inlineHelpText>
        <label>XDeprecated: Bid Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round 1 - Verified</fullName>
                </value>
                <value>
                    <fullName>Round 1 - Notified</fullName>
                </value>
                <value>
                    <fullName>Round 2 - Verified</fullName>
                </value>
                <value>
                    <fullName>Round 2 - Notified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <inlineHelpText>Deprecating and moving to Program Period...bids are always competitive or non-competitive on the program period level.</inlineHelpText>
        <label>XDeprecated: Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Bid</fullName>
                </value>
                <value>
                    <fullName>Non-Competitive Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Individual authorized to execute a contract on behalf of the business or organization. If the Bid Contact is authorized, enter their name here as well.</inlineHelpText>
        <label>Contract Representative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Id</field>
                <operation>equals</operation>
                <value>012a00000018FX4</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bids (Contract Representative)</relationshipLabel>
        <relationshipName>Bids1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the contract record for this bid.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracting_Party_Type__c</fullName>
        <description>The Form Assembly bid form has this field. Identifies the type of account that is making the bid (individual, llc, etc.) Different from the Account Type field on the Account, so the info is stored here.</description>
        <inlineHelpText>Individual, LLC, Corporation, etc.</inlineHelpText>
        <label>Contracting Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Party__c</fullName>
        <formula>Contract_Representative__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business or organization entity that will enter into a contract with TNC. The entity is based off of the &quot;Account Name&quot; field associated with the Contract Representative Contact.</inlineHelpText>
        <label>XDeprecated: Contracting Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controls_Notes__c</fullName>
        <inlineHelpText>Unenrolled fields are used as control fields, to measure the efficacy of the program.</inlineHelpText>
        <label>Unenrolled Field(s) Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Controls__c</fullName>
        <inlineHelpText>Unenrolled fields are used as control fields, to measure the efficacy of the program. Indicates if the bidder has unenrolled fields available.</inlineHelpText>
        <label>Unenrolled Field(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Global__c</fullName>
        <inlineHelpText>County/Counties that the account&apos;s farm is in.</inlineHelpText>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Changed to Global Picklist; Deprecating.</description>
        <label>XDeprecated: County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <description>Changed to global picklist; deprecating</description>
        <label>XDeprecated: Crop</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Duck Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crop_text__c</fullName>
        <inlineHelpText>Text field. Crop as entered by bidder. Rice and Wild Rice are listed as options on the bid form, however, the bidder may enter any value into the &apos;other&apos; section if that is applicable.</inlineHelpText>
        <label>Crop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <inlineHelpText>Date bid form signed digitally and submitted via bid form on birdreturns.org</inlineHelpText>
        <label>Date/Time Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_of_Attachments__c</fullName>
        <inlineHelpText>Description of attachments submitted with bid (as described by bidder).</inlineHelpText>
        <label>Description of Attachments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Preparation__c</fullName>
        <description>Used for FY15. Replace Site preparation multiselect picklist field created in FY14.</description>
        <inlineHelpText>Post-harvest straw management practices for the site described in the bid.</inlineHelpText>
        <label>Field Preparation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chisel</fullName>
                </value>
                <value>
                    <fullName>Chop</fullName>
                </value>
                <value>
                    <fullName>Disc</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Hay</fullName>
                </value>
                <value>
                    <fullName>Roll</fullName>
                </value>
                <value>
                    <fullName>Stomp</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_s_Selected__c</fullName>
        <description>Automatically filled in with the fields that were entered into the bid form by the bidder. Use this space to reflect any changes to the field(s) selected after the bid has been submitted but before the contract has been created.</description>
        <inlineHelpText>Automatically filled in with the fields that were entered into the bid form by the bidder. Use this space to reflect any changes to the field(s) selected after the bid has been submitted but before the contract has been created.</inlineHelpText>
        <label>Field(s) Selected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_s_Submitted__c</fullName>
        <inlineHelpText>Nomenclature to use with the bidder when referring to the fields that they are bidding on. If changes are made to the fields that will be used in the program, please update those changes in the Field(s) Selected field.</inlineHelpText>
        <label>Field(s) Submitted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>Fiscal year (July 1 -  June 30) the participant submitted the bid.</inlineHelpText>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY14</fullName>
                </value>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
                <value>
                    <fullName>FY18</fullName>
                </value>
                <value>
                    <fullName>FY19</fullName>
                </value>
                <value>
                    <fullName>FY20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIS_Acres__c</fullName>
        <inlineHelpText>Number of acres in the fields being bidded on according to GIS. May be different from the number of acres submitted by the bidder. If there is a significant difference (&gt;5%), contact the bidder to discuss.</inlineHelpText>
        <label>GIS Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Irrigation_District__c</fullName>
        <inlineHelpText>Irrigation district that the fields are in.</inlineHelpText>
        <label>Irrigation District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Okay_to_Extend__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the bidder is willing and able to extend their bid by an additional 2 weeks (only available for August B option).</inlineHelpText>
        <label>Okay to Extend?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Old field. Deprecating.</inlineHelpText>
        <label>XDeprecated: Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_BidContact__c</fullName>
        <description>Used in FY14 but retired in FY15 by request. Not be used or referenced. Contact record has contact preference.</description>
        <label>XDeprecated: Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Grower has indicated that this is the program option that they prefer to get if they can only get one.</inlineHelpText>
        <label>Preferred Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Type__c</fullName>
        <inlineHelpText>Does the grower produce conventional or organic crops?</inlineHelpText>
        <label>Production Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Option_Dates__c</fullName>
        <inlineHelpText>Actual date range of the program option selected for this bid as laid out on the online bid form.</inlineHelpText>
        <label>Program Option Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Option__c</fullName>
        <description>Indicates the duration of the bidder&apos;s enrollment with the program.</description>
        <inlineHelpText>If several program options from the same bidder are accepted, select all applicable program options on a single bid and associate that bid number to the contract.</inlineHelpText>
        <label>Program Option</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Week - Spring</fullName>
                </value>
                <value>
                    <fullName>4 Week - Spring</fullName>
                </value>
                <value>
                    <fullName>6 Week - Spring</fullName>
                </value>
                <value>
                    <fullName>8 Week - Spring</fullName>
                </value>
                <value>
                    <fullName>10 Week - Spring</fullName>
                </value>
                <value>
                    <fullName>Aug B - Fall</fullName>
                </value>
                <value>
                    <fullName>Sep A - Fall</fullName>
                </value>
                <value>
                    <fullName>Sep B - Fall</fullName>
                </value>
                <value>
                    <fullName>Oct A - Fall</fullName>
                </value>
                <value>
                    <fullName>Oct B - Fall</fullName>
                </value>
                <value>
                    <fullName>4 Week - Mar A</fullName>
                </value>
                <value>
                    <fullName>4 Week - Mar B</fullName>
                </value>
                <value>
                    <fullName>6 Week - Mar A</fullName>
                </value>
                <value>
                    <fullName>6 Week - Mar B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Program Period associated with this bid. Format: &quot;16-FR&quot; where 16 is the 2 digit year, F is for Fall (can also be S for Spring or W for Winter), and R is for the crop, in this case Rice. The program period record should be created before bidding begins.</inlineHelpText>
        <label>Program Period</label>
        <referenceTo>Bird_Returns_Program_Period__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Location__c</fullName>
        <inlineHelpText>Location of property (including address and any additional information that will help program staff find it when out in the field).</inlineHelpText>
        <label>Property Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <inlineHelpText>Name of property as provided by bidder on online bid form.</inlineHelpText>
        <label>Property Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>No longer in use. Was a lookup to an object called &apos;Contact Property&apos;.</inlineHelpText>
        <label>XDeprecated: Property</label>
        <referenceTo>Contact_Property__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round_1_Bid_Amount_Per_Acre__c</fullName>
        <inlineHelpText>Amount per acre ($). Based on the bidder&apos;s cost and labor for flooding the fields.</inlineHelpText>
        <label>Bid Amount Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Round_1_Bid_Status__c</fullName>
        <label>XDeprecated: Round 1 Bid Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisionally Accepted</fullName>
                </value>
                <value>
                    <fullName>Provisionally Denied</fullName>
                </value>
                <value>
                    <fullName>Provisionally Denied in Excess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round_2_Bid_Amount_per_Acre__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in FY14, but not in FY15. FY15 only has one round of bidding. This field will no longer be used or referenced.</description>
        <label>XDeprecated: Round 2 Bid Amount per Acre</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Round_2_Bid_Status__c</fullName>
        <description>Used in FY14, but not in FY15. FY15 only has one round of bidding. This field will no longer be used or referenced.</description>
        <label>XDeprecated: Round 2 Bid Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <inlineHelpText>Digital signature of bidder (submitted via bid form on birdreturns.org).</inlineHelpText>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Preparation__c</fullName>
        <description>Field used in FY14 program. FY15 program has different picklist type, and this field will no longer be used or referenced; see &quot;Field Preparation&quot; for FY15. Deprecating.</description>
        <label>XDeprecated: Site Preparation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bale</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Chisel</fullName>
                </value>
                <value>
                    <fullName>Chop</fullName>
                </value>
                <value>
                    <fullName>Light Disc</fullName>
                </value>
                <value>
                    <fullName>Heavy Disc</fullName>
                </value>
                <value>
                    <fullName>Mow</fullName>
                </value>
                <value>
                    <fullName>Stomp</fullName>
                </value>
                <value>
                    <fullName>Roll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status is only updated once the bid has been finalized. Tier 2 bidders are acceptable but will only be approved on a contingency basis.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Bid__c</fullName>
        <formula>Acres__c  * Round_1_Bid_Amount_Per_Acre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total bid is the bid amount per acre multiplied by the total number of acres.</inlineHelpText>
        <label>Total Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verification_Notes__c</fullName>
        <inlineHelpText>Old field, no longer in use. Deprecating.</inlineHelpText>
        <label>XDeprecated: Verification Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Water_Source__c</fullName>
        <description>New field for FY15.</description>
        <inlineHelpText>Source of water to be used for this bid&apos;s fields.</inlineHelpText>
        <label>Water Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surface - district</fullName>
                </value>
                <value>
                    <fullName>Surface - riparian</fullName>
                </value>
                <value>
                    <fullName>Groundwater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bid</label>
    <listViews>
        <fullName>Accepted_Bids_Spring_2017</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Bid_Contact__c</columns>
        <columns>Program_Option__c</columns>
        <columns>Acres__c</columns>
        <columns>Round_1_Bid_Amount_Per_Acre__c</columns>
        <columns>Total_Bid__c</columns>
        <columns>Bid_Notes__c</columns>
        <columns>Field_s_Submitted__c</columns>
        <columns>County_Global__c</columns>
        <columns>Controls__c</columns>
        <columns>Controls_Notes__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>Program_Period__c</field>
            <operation>equals</operation>
            <value>18-FR</value>
        </filters>
        <label>Accepted Bids Fall 2018</label>
        <sharedTo>
            <group>Bird_Returns</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Bid_Contact__c</columns>
        <columns>Contract_Representative__c</columns>
        <columns>Acres__c</columns>
        <columns>Round_1_Bid_Amount_Per_Acre__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BirdReturns_New_Pre_Auction_Bids</fullName>
        <columns>NAME</columns>
        <columns>Bid_Contact__c</columns>
        <columns>Contract_Representative__c</columns>
        <columns>Account__c</columns>
        <columns>Program_Option__c</columns>
        <columns>Acres__c</columns>
        <columns>Round_1_Bid_Amount_Per_Acre__c</columns>
        <columns>Total_Bid__c</columns>
        <columns>County_Global__c</columns>
        <columns>Irrigation_District__c</columns>
        <columns>Crop_text__c</columns>
        <columns>Production_Type__c</columns>
        <columns>Field_Preparation__c</columns>
        <columns>Controls__c</columns>
        <columns>Water_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program_Period__c</field>
            <operation>equals</operation>
            <value>17-SR</value>
        </filters>
        <label>BirdReturns New Pre-Auction Bids</label>
    </listViews>
</CustomObject>